generic functions and FC.React

--- a/airbnb/app/globals.css
+++ b/airbnb/app/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body, 
+:root {
+    min-height: 100vh;
+}
+/* NB https://greggod.medium.com/css-do-not-put-height-100-on-the-body-html-e36bda3551b3 min-height:100vh vs height: 100% */
