--- a/airbnb/app/globals.css
+++ b/airbnb/app/globals.css
@@ -14,4 +14,16 @@ body,
 .leaflet-top{
     z-index: 0 !important;
 }
+
+
+.rdrMonth {
+    width: 100% !important;
+}
+  
+.rdrCalendarWrapper {
+    font-size: 16px !important;
+    width: 100% !important;
+}
+
+
 /* NB https://greggod.medium.com/css-do-not-put-height-100-on-the-body-html-e36bda3551b3 min-height:100vh vs height: 100% */
